feat(ChessPositionParser): created a single letterToPositionX constant and make an informative exception message